# predictions

./: .gitignore  CLAUDE.md  JAVASCRIPT_STYLE.md  PARSER_PLAN.md  PYTHON_STYLE.md  README.md  exploration_output.txt  explore_xlsx.py  main.py  package.json  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: deploy.yml
backend/: main.py  old.py  pyproject.toml
data/: Family Predictions 2022.xlsx
frontend/src/: index.sass
input/: 2022.xlsx  2023.xlsx  2024.xlsx  2025.xlsx
output/: game_data.csv  game_data.json
predictions/: __init__.py
predictions-frontend/: .gitignore  FRONTEND_DESIGN.md  README.md  encrypt-data.js  generate-password-hash.html  index.html  package-lock.json  package.json  vite.config.js
predictions-frontend/public/: game_data.arrow  game_data.encrypted
predictions-frontend/src/: App.svelte  app.css
predictions-frontend/src/lib/: ControlGroup.svelte  DisplayToggle.svelte  FilterControls.svelte  Modal.svelte  PasswordGate.svelte  PlotContainer.svelte  TabBar.svelte  authStore.svelte.js  gameDataStore.svelte.js
predictions-frontend/src/utils/: crypto.js  scoring.js
predictions-frontend/src/views/: Calibration.svelte  CategoryBreakdown.svelte  ConfidenceAnalysis.svelte  ConfidenceCalibration.svelte  OwnVsOthers.svelte  PlayerComparison.svelte  Prior.svelte  RawData.svelte  (+3 more)
predictions/parser/: __init__.py  xlsx_parser.py
predictions/validation/: __init__.py  validators.py
src/: App.tsx  index.tsx
tests/: README.md  __init__.py  create_fixtures.py  test_xlsx_parser.py
tests/fixtures/: test_2022.xlsx  test_2025.xlsx
