[project]
name = "predictions"
version = "0.1.0"
description = "Importing family predictions from xlsx into consistent format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "bpython>=0.26",
    "pytest>=9.0.2",
]
